<resources>
    <string name="app_name">FULiveDemo</string>
    <string name="fu_live_demo">FU Live Demo effects version</string>
    <string name="main_classification_face">Face effects</string>
    <string name="main_classification_human">Body effects</string>
    <string name="home_function_name_beauty">Beautification</string>
    <string name="home_function_name_light_makeup">Light Makeup</string>
    <string name="home_function_name_animoji">Animoji</string>
    <string name="home_function_name_sticker">Sticker</string>
    <string name="home_function_name_ar">AR Mesh</string>
    <string name="home_function_name_big_head"> Funny big head</string>
    <string name="home_function_name_hair">Hair Color</string>
    <string name="home_function_name_expression">Expression</string>
    <string name="home_function_name_poster_face">Face Fusion</string>
    <string name="home_function_name_music_filter">Music Filter</string>
    <string name="home_function_name_portrait_segment">Background segmentation</string>
    <string name="home_function_name_gesture">Gesture</string>
    <string name="home_function_name_face_warp">FaceWarp</string>
    <string name="home_function_name_makeup">Make Up</string>
    <string name="home_function_name_beauty_body">Body Shape</string>
    <string name="home_function_name_human_avatar">Whole-body Avatar</string>
    <string name="home_function_name_action_recognition">Action recognition</string>
    <string name="home_function_name_bg_seg_green">Green Screen Key</string>
    <string name="camera_dialog_title">warning</string>
    <string name="camera_dialog_message">Camera permissions are disabled or the camera is occupied by another app!</string>
    <string name="sorry_no_permission">Sorry ,Your license is not supported for these functions.</string>
    <string name="camera_dialog_open">Retry</string>
    <string name="camera_dialog_back">quit</string>
    <string name="fu_base_debug">Resolution:\n\t%dX%d\nFPS: %d\nRender time:\n\t%dms</string>
    <string name="save_photo_success">Save photo successfully!</string>
    <string name="save_video_success">Save video successfully!</string>
    <string name="save_video_too_short">The video is to short!</string>
    <string name="fu_base_is_tracking_text">No Face Tracking</string>
    <string name="fu_base_input_type_single">SingleInput</string>
    <string name="fu_base_input_type_double">DualInput</string>
    <string name="beauty_box_heavy_blur_fine">Fine Smooth</string>
    <string name="beauty_box_color_level">Whiten</string>
    <string name="beauty_box_red_level">Ruddy</string>
    <string name="beauty_box_sharpen">Sharpen</string>
    <string name="beauty_box_eye_bright">Eye Brighten</string>
    <string name="beauty_box_tooth_whiten">Tooth Whiten</string>
    <string name="beauty_box_eye_enlarge">Eye Enlarge</string>
    <string name="beauty_box_eye_circle">Eye Round</string>
    <string name="beauty_box_cheek_thinning">Cheek Thin</string>
    <string name="beauty_box_cheek_v">V Face</string>
    <string name="beauty_box_cheekbones">Cheekbone</string>
    <string name="beauty_box_lower_jaw">Jawbone</string>
    <string name="beauty_box_cheek_narrow">CheekNarrow</string>
    <string name="beauty_box_cheek_small">Cheek Small</string>
    <string name="beauty_box_intensity_chin">Chin</string>
    <string name="beauty_box_intensity_forehead">Forehead</string>
    <string name="beauty_box_intensity_nose">Nose</string>
    <string name="beauty_box_intensity_mouth">Mouth</string>
    <string name="beauty_radio_skin_beauty">Skin</string>
    <string name="beauty_radio_face_shape">Reshape</string>
    <string name="beauty_radio_filter">Filter</string>
    <string name="beauty_radio_style">Presets</string>
    <string name="makeup_radio_lipstick">Lipstick</string>
    <string name="makeup_radio_blusher">Blush</string>
    <string name="makeup_radio_eyebrow">Eyebrow</string>
    <string name="makeup_radio_eye_shadow">Eye Shadow</string>
    <string name="makeup_radio_eye_liner">Eye Liner</string>
    <string name="makeup_radio_eyelash">Eyelash</string>
    <string name="makeup_radio_contact_lens">Contact Lens</string>
    <string name="makeup_radio_foundation">Foundation</string>
    <string name="makeup_radio_highlight">Highlight</string>
    <string name="makeup_radio_shadow">Shadow</string>
    <string name="makeup_radio_remove">Remove</string>
    <string name="makeup_customize">Custom</string>
    <string name="makeup_peach_blossom">peach</string>
    <string name="makeup_boyfriend">boyfriend</string>
    <string name="makeup_clear">clear</string>
    <string name="makeup_grapefruit">grapefruit</string>
    <string name="beauty_micro_pouch">Circle</string>
    <string name="beauty_micro_nasolabial">Wrinkles</string>
    <string name="beauty_micro_smile">Smile</string>
    <string name="beauty_micro_canthus">Canthus</string>
    <string name="beauty_micro_philtrum">Philtrum</string>
    <string name="beauty_micro_long_nose">Length</string>
    <string name="beauty_micro_eye_space">Eye distance</string>
    <string name="beauty_micro_eye_rotate">Slant</string>
    <string name="beauty_face_style_none">None</string>
    <string name="beauty_face_style_1">Style 1</string>
    <string name="beauty_face_style_2">Style 2</string>
    <string name="beauty_face_style_3">Style 3</string>
    <string name="beauty_face_style_4">Style 4</string>
    <string name="beauty_face_style_5">Style 5</string>
    <string name="beauty_face_style_6">Style 6</string>
    <string name="beauty_face_style_7">Style 7</string>
    <string name="beauty_face_style_toast">To use %s, cancel \'Presets\' first.</string>
    <string name="select_data_photo">Photo</string>
    <string name="select_data_video">Video</string>
    <string name="select_data_title">Choose photo or video from your album</string>
    <string name="image_file_does_not_exist">The selected image file does not exist.</string>
    <string name="video_file_does_not_exist">The selected video file does not exist.</string>
    <string name="future_warrior">Open Your Mouth</string>
    <string name="jet_mask">Puff Your Cheeks</string>
    <string name="sdx2">Frown</string>
    <string name="luhantongkuan_ztt_fu">Blink</string>
    <string name="qingqing_ztt_fu">Give me a kiss</string>
    <string name="xiaobianzi_zh_fu">Have a Smile</string>
    <string name="xiaoxueshen_ztt_fu">Whistle</string>
    <string name="hez_ztt_fu">Open Your Mouth</string>
    <string name="push_hand">High Five</string>
    <string name="fu_lm_koreaheart">Finger Heart</string>
    <string name="ssd_thread_six">Shaka sign</string>
    <string name="ssd_thread_cute">Holding Fist</string>
    <string name="origin">Origin</string>
    <string name="bailiang_1">Bright 1</string>
    <string name="bailiang_2">Bright 2</string>
    <string name="bailiang_3">Bright 3</string>
    <string name="bailiang_4">Bright 4</string>
    <string name="bailiang_5">Bright 5</string>
    <string name="bailiang_6">Bright 6</string>
    <string name="bailiang_7">Bright 7</string>
    <string name="fennen_1">Pink 1</string>
    <string name="fennen_2">Pink 2</string>
    <string name="fennen_3">Pink 3</string>
    <string name="fennen_5">Pink 5</string>
    <string name="fennen_6">Pink 6</string>
    <string name="fennen_7">Pink 7</string>
    <string name="fennen_8">Pink 8</string>
    <string name="xiaoqingxin_1">Fresh 1</string>
    <string name="xiaoqingxin_3">Fresh 3</string>
    <string name="xiaoqingxin_4">Fresh 4</string>
    <string name="xiaoqingxin_6">Fresh 6</string>
    <string name="lengsediao_1">Cold tone 1</string>
    <string name="lengsediao_2">Cold tone 2</string>
    <string name="lengsediao_3">Cold tone 3</string>
    <string name="lengsediao_4">Cold tone 4</string>
    <string name="lengsediao_7">Cold tone 7</string>
    <string name="lengsediao_8">Cold tone 8</string>
    <string name="lengsediao_11">Cold tone 11</string>
    <string name="nuansediao_1">Warm tone 1</string>
    <string name="nuansediao_2">Warm tone 2</string>
    <string name="gexing_1">Personality 1</string>
    <string name="gexing_2">Personality 2</string>
    <string name="gexing_3">Personality 3</string>
    <string name="gexing_4">Personality 4</string>
    <string name="gexing_5">Personality 5</string>
    <string name="gexing_7">Personality 7</string>
    <string name="gexing_10">Personality 10</string>
    <string name="gexing_11">Personality 11</string>
    <string name="heibai_1">Fade 1</string>
    <string name="heibai_2">Fade 2</string>
    <string name="heibai_3">Fade 3</string>
    <string name="heibai_4">Fade 4</string>
    <string name="ziran_1">Nature 1</string>
    <string name="ziran_2">Nature 2</string>
    <string name="ziran_3">Nature 3</string>
    <string name="ziran_4">Nature 4</string>
    <string name="ziran_5">Nature 5</string>
    <string name="ziran_6">Nature 6</string>
    <string name="ziran_7">Nature 7</string>
    <string name="ziran_8">Nature 8</string>
    <string name="zhiganhui_1">Grey 1</string>
    <string name="zhiganhui_2">Grey 2</string>
    <string name="zhiganhui_3">Grey 3</string>
    <string name="zhiganhui_4">Grey 4</string>
    <string name="zhiganhui_5">Grey 5</string>
    <string name="zhiganhui_6">Grey 6</string>
    <string name="zhiganhui_7">Grey 7</string>
    <string name="zhiganhui_8">Grey 8</string>
    <string name="mitao_1">Peach 1</string>
    <string name="mitao_2">Peach 2</string>
    <string name="mitao_3">Peach 3</string>
    <string name="mitao_4">Peach 4</string>
    <string name="mitao_5">Peach 5</string>
    <string name="mitao_6">Peach 6</string>
    <string name="mitao_7">Peach 7</string>
    <string name="mitao_8">Peach 8</string>
    <string name="poster_take_photo">Please take photos by positive face.</string>
    <string name="dialog_no_track_face">No face detected, please re-upload</string>
    <string name="dialog_face_rotation_not_valid">Side face angle is too greater, please re-upload</string>
    <string name="dialog_got">OK</string>
    <string name="tip_dual_face">Multiple people detected, please choose one person for face fusion</string>
    <string name="cartoon_filter">Cartoon Filter</string>
    <string name="live_photo_back_not_save">Custom won\'t be saved after return</string>
    <string name="live_photo_btn_delete">Delete</string>
    <string name="live_photo_btn_cancel">Cancel</string>
    <string name="live_photo_btn_delete_">Delete (%d)</string>
    <string name="live_photo_empty_list_tip">Not created model</string>
    <string name="live_photo_delete_effect">Delete model</string>
    <string name="live_photo__delete_all">All</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>
    <string name="dialog_confirm_delete">Are you sure to delete?</string>
    <string name="toast_delete_succeed">Delete succeed</string>
    <string name="toast_delete_failed">Delete failed</string>
    <string name="live_photo_save_succeed">Save succeed</string>
    <string name="delete_avatar_model">Delete model</string>
    <string name="new_avatar_model">Create model</string>
    <string name="edit_avatar_model">Edit model</string>
    <string name="avatar_face_hair">Hair style</string>
    <string name="avatar_face_face">Face shape</string>
    <string name="recover">Recover</string>
    <string name="slimming">Body</string>
    <string name="long_legs">Leg</string>
    <string name="thin_waist">Waist</string>
    <string name="beautify_shoulder">Shoulder</string>
    <string name="beautify_hip_slim">Hip</string>
    <string name="beautify_head_slim">Head shrink</string>
    <string name="beautify_leg_thin_slim">Thin leg</string>
    <string name="resolution_480p">480x640</string>
    <string name="resolution_720p">720x1280</string>
    <string name="resolution_1080p">1080x1920</string>
    <string name="select_data_photo_or_video">Load picture or video</string>
</resources>