<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x268"
    android:background="#BD050F14">

    <com.faceunity.fulivedemo.ui.seekbar.DiscreteSeekBar
        android:id="@+id/seek_bar_beauty_body"
        android:layout_width="@dimen/x528"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/x32"
        app:dsb_indicatorColor="@color/main_color"
        app:dsb_indicatorElevation="0dp"
        app:dsb_indicatorPopupEnabled="true"
        app:dsb_max="100"
        app:dsb_trackHeight="@dimen/x4"
        app:dsb_min="0"
        app:dsb_progressColor="@color/main_color"
        app:dsb_rippleColor="@color/main_color"
        app:dsb_scrubberHeight="@dimen/x4"
        app:dsb_thumbSize="@dimen/x32"
        app:dsb_trackBaseHeight="@dimen/x16"
        app:dsb_trackColor="@color/colorWhite"
        app:dsb_value="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/x148"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom">

        <ImageView
            android:id="@+id/iv_recover_body"
            android:layout_width="@dimen/x88"
            android:layout_height="@dimen/x88"
            android:layout_marginBottom="@dimen/x18"
            android:src="@drawable/demo_icon_recover_open"
            app:layout_constraintBottom_toTopOf="@id/tv_recover_body"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_recover_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x30"
            android:text="@string/recover"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="@dimen/x1"
        android:layout_height="@dimen/x40"
        android:layout_gravity="left|bottom"
        android:layout_marginLeft="@dimen/x148"
        android:layout_marginTop="@dimen/x24"
        android:layout_marginBottom="@dimen/x94"
        android:background="@color/divider_line_color" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:layout_marginLeft="@dimen/x150"
        android:scrollbars="none">

        <com.faceunity.fulivedemo.ui.beautybox.BeautyBoxGroup
            android:id="@+id/beauty_group_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_body_slim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checked="true"
                app:drawable_close_checked="@drawable/demo_icon_slimming_sel"
                app:drawable_close_normal="@drawable/demo_icon_slimming_nor"
                app:drawable_open_checked="@drawable/demo_icon_slimming_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_slimming_nor_open"
                app:text_normal="@string/slimming" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_long_leg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_stovepipe_sel"
                app:drawable_close_normal="@drawable/demo_icon_stovepipe_nor"
                app:drawable_open_checked="@drawable/demo_icon_stovepipe_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_stovepipe_nor_open"
                app:text_normal="@string/long_legs" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_thin_waist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_thin_waist_sel"
                app:drawable_close_normal="@drawable/demo_icon_thin_waist_nor"
                app:drawable_open_checked="@drawable/demo_icon_thin_waist_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_thin_waist_nor_open"
                app:text_normal="@string/thin_waist" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_beauty_shoulder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_shoulder_sel"
                app:drawable_close_normal="@drawable/demo_icon_shoulder_nor"
                app:drawable_open_checked="@drawable/demo_icon_shoulder_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_shoulder_nor_open"
                app:text_normal="@string/beautify_shoulder" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_hip_slim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_hip_sel"
                app:drawable_close_normal="@drawable/demo_icon_hip_nor"
                app:drawable_open_checked="@drawable/demo_icon_hip_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_hip_nor_open"
                app:text_normal="@string/beautify_hip_slim" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_head_slim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_little_head_sel"
                app:drawable_close_normal="@drawable/demo_icon_little_head_nor"
                app:drawable_open_checked="@drawable/demo_icon_little_head_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_little_head_nor_open"
                app:text_normal="@string/beautify_head_slim" />

            <com.faceunity.fulivedemo.ui.beautybox.BeautyBox
                android:id="@+id/beauty_box_leg_thin_slim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawable_close_checked="@drawable/demo_icon_thin_leg_sel"
                app:drawable_close_normal="@drawable/demo_icon_thin_leg_nor"
                app:drawable_open_checked="@drawable/demo_icon_thin_leg_sel_open"
                app:drawable_open_normal="@drawable/demo_icon_thin_leg_nor_open"
                app:text_normal="@string/beautify_leg_thin_slim" />

        </com.faceunity.fulivedemo.ui.beautybox.BeautyBoxGroup>

    </HorizontalScrollView>

</FrameLayout>