<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/x682"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/demo_popup">

    <RadioGroup
        android:id="@+id/rg_resolutions"
        android:layout_width="wrap_content"
        android:background="@drawable/fu_base_resolution_bg"
        android:layout_height="@dimen/x64"
        android:layout_marginTop="@dimen/x40"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.faceunity.fulivedemo.ui.XfermodeRadioButton
            android:id="@+id/rb_resolution_480p"
            android:layout_width="@dimen/x194"
            android:layout_height="match_parent"
            android:background="@drawable/fu_base_input_type_radio_left_background"
            android:button="@null"
            android:gravity="center"
            app:text_size_xfermode="@dimen/text_size_26"
            app:text_xfermode="@string/resolution_480p" />

        <com.faceunity.fulivedemo.ui.XfermodeRadioButton
            android:id="@+id/rb_resolution_720p"
            android:layout_width="@dimen/x194"
            android:layout_height="match_parent"
            android:background="@drawable/fu_base_input_type_radio_middle_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            app:text_size_xfermode="@dimen/text_size_26"
            app:text_xfermode="@string/resolution_720p" />

        <com.faceunity.fulivedemo.ui.XfermodeRadioButton
            android:id="@+id/rb_resolution_1080p"
            android:layout_width="@dimen/x194"
            android:layout_height="match_parent"
            android:background="@drawable/fu_base_input_type_radio_right_background"
            android:button="@null"
            android:gravity="center"
            app:text_size_xfermode="@dimen/text_size_26"
            app:text_xfermode="@string/resolution_1080p" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_select_photo"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/x44"
        android:layout_height="@dimen/x104"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_resolutions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_data_photo_or_video"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x26"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demo_icon_add_to"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/divider_line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>